# ising_model_speed

./: .gitignore  Cargo.toml  Dockerfile_18.04  Dockerfile_20.04  Dockerfile_22.04  README.md  ising.jl  run_bench.sh
src/: main.rs
