[package]
name = "ising_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
libm = { version = "0.2.2"}
plotters = { version = "0.3.1"}

[profile.release]
debug = true

[profile.bench]
debug = true