[package]
name = "ising_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
rand_xoshiro = { version = "0.6.0"}

[profile.release]
debug = true
lto = "thin"

[profile.bench]
debug = true
